--- a/app/directions.html
+++ b/app/directions.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Caddo Lake Bayou Tours</title>
+    <title>Directions - Caddo Lake Bayou Tours</title>
     <meta name="description" content="Caddo Lake Bayou Tours">
     <meta name="author" content="Taran Pierce">
     <link rel="stylesheet" href="css/base.css">
     <!--[if lt IE 9]>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
   </head>
   <body>
@@ -27,7 +27,7 @@
             <li>
               <a href="about.html">About</a>
             </li>
-            <li>
+            <li class="active">
               <a href="directions.html">Directions</a>
             </li>
             <li>
@@ -41,19 +41,33 @@
       </div>
     </nav>
     <div class="container">
-      <img class="img-responsive" src="images/test-image.jpg" alt="Test Image" />
-      <h1>Caddo Lake Bayou Tours</h1>
-      <h2>Set up your tour today!</h2>
+      <h1>Directions</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="row">
+        <div class="col-xs-12 col-sm-6">
+          <h2>Specific Directions</h2>
+          <p>Maybe some specific things here that Google maps wouldn't actually tell you. Just in case people need it. Like, look for the store. Or what ever.</p>
+          <ul>
+            <li>Step 1</li>
+            <li>Step 2</li>
+            <li>Step 3</li>
+            <li>Step 4</li>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <h4>Google Map will go here</h4>
+          <img src="google-map.jgp" />
+        </div>
+      </div>
     </div>
 
     <!-- build:js js/bootstrap-bundle.js -->
-    <script type="text/javascript" src="/node_modules/jquery/dist/jquery.js"></script> 
-    <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script> 
-    <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script> 
-    <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script> 
-    <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/modal.js"></script> 
-    <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script> 
+    <script type="text/javascript" src="/node_modules/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
+    <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
+    <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
+    <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/modal.js"></script>
+    <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
     <!-- endbuild -->
   </body>
 </html>
