--- a/app/about.html
+++ b/app/about.html
@@ -11,8 +11,9 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container">
+    <div class="container">
+      <a class="logo" href="/index.html">Caddo Lake Bayou Tours</a>
+      <nav class="navbar navbar-default">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -20,10 +21,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/index.html">Caddo Lake Bayou Tours</a>
         </div>
         <div class="collapse navbar-collapse" id="main-nav">
           <ul class="nav navbar-nav">
+            <li>
+              <a href="index.html">Home</a>
+            </li>
             <li class="active">
               <a href="about.html">About</a>
             </li>
@@ -38,8 +41,8 @@
             </li>
           </ul>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-7">
