--- a/app/photo-gallery.html
+++ b/app/photo-gallery.html
@@ -11,8 +11,9 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container">
+   <div class="container">
+      <a class="logo" href="/index.html">Caddo Lake Bayou Tours</a>
+      <nav class="navbar navbar-default">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -20,10 +21,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/index.html">Caddo Lake Bayou Tours</a>
         </div>
         <div class="collapse navbar-collapse" id="main-nav">
           <ul class="nav navbar-nav">
+            <li>
+              <a href="index.html">Home</a>
+            </li>
             <li>
               <a href="about.html">About</a>
             </li>
@@ -38,13 +41,43 @@
             </li>
           </ul>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
     <div class="container">
       <h1>Photo Gallery</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="image-gallery-container">
+        <div class="image-gallery">
+          <div class="slide">
+            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+          </div>
+          <div class="slide">
+            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+          </div>
+          <div class="slide">
+            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+          </div>
+          <div class="slide">
+            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+          </div>
+          <div class="slide">
+            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+          </div>
+          <div class="slide">
+            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+          </div>
+          <div class="slide">
+            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+          </div>
+          <div class="slide">
+            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+          </div>
+          <div class="slide">
+            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+          </div>
+        </div>
+      </div>
     </div>
-
     <!-- build:js js/bootstrap-bundle.js -->
     <script type="text/javascript" src="/node_modules/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
@@ -52,6 +85,8 @@
     <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
     <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/modal.js"></script>
     <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
-    <!-- endbuild -->
+    <script type="text/javascript" src="/node_modules/siema/dist/siema.min.js"></script>
+   <!-- endbuild -->
+   <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
