--- a/app/photo-gallery.html
+++ b/app/photo-gallery.html
@@ -11,73 +11,100 @@
     <![endif]-->
   </head>
   <body>
-   <div class="container">
-      <a class="logo" href="/index.html">Caddo Lake Bayou Tours</a>
-      <nav class="navbar navbar-default">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+   <div class="container body-content">
+    <header>
+        <div class="logo-container">
+          <a class="logo" href="/index.html">Caddo Lake Bayou Tours</a>
         </div>
-        <div class="collapse navbar-collapse" id="main-nav">
-          <ul class="nav navbar-nav">
-            <li>
-              <a href="index.html">Home</a>
-            </li>
-            <li>
-              <a href="about.html">About</a>
-            </li>
-            <li>
-              <a href="directions.html">Directions</a>
-            </li>
-            <li class="active">
-              <a href="photo-gallery.html">Photo Gallery</a>
-            </li>
-            <li>
-              <a href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </div>
-    <div class="container">
+        <nav class="navbar navbar-default">
+          <a class="navbar-brand" href="/index.html">Caddo Lake Bayou Tours</a>
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div class="collapse navbar-collapse" id="main-nav">
+            <ul class="nav navbar-nav">
+              <li>
+                <a href="about.html">About</a>
+              </li>
+              <li>
+                <a href="directions.html">Directions</a>
+              </li>
+              <li class="active">
+                <a href="photo-gallery.html">Photo Gallery</a>
+              </li>
+              <li>
+                <a href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+  </header>
+     <section>
       <h1>Photo Gallery</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <div class="image-gallery-container">
-        <div class="image-gallery">
-          <div class="slide">
-            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-          </div>
-          <div class="slide">
-            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-          </div>
-          <div class="slide">
-            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-          </div>
-          <div class="slide">
-            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-          </div>
-          <div class="slide">
-            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-          </div>
-          <div class="slide">
-            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-          </div>
-          <div class="slide">
-            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-          </div>
-          <div class="slide">
-            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-          </div>
-          <div class="slide">
-            <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-          </div>
+      <div class="image-gallery">
+        <div class="slide">
+          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+        </div>
+        <div class="slide">
+          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+        </div>
+        <div class="slide">
+          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+        </div>
+        <div class="slide">
+          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+        </div>
+        <div class="slide">
+          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+        </div>
+        <div class="slide">
+          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+        </div>
+        <div class="slide">
+          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+        </div>
+        <div class="slide">
+          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+        </div>
+        <div class="slide">
+          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
         </div>
       </div>
     </div>
+     </section>
+    <footer>
+        <div class="row">
+          <div class="col-xs-12 col-sm-4">
+            <h4>Sitemap</h4>
+            <ul class="list-unstyled">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="directions.html">Directions</a></li>
+              <li><a href="photo-gallery.html">Photo Gallery</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <h4>Quick Links</h4>
+            <ul class="list-unstyled">
+              <li>First</li>
+              <li>Second</li>
+            </ul>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <h4>Social Media</h4>
+          </div>
+        </div>
+        <p class="copy-right">Copyright 2018 &copy;</p>
+      </footer>
+   </div>
     <!-- build:js js/bootstrap-bundle.js -->
     <script type="text/javascript" src="/node_modules/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="/node_modules/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
