--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caddo Lake Bayou Tours</title>
     <meta name="description" content="Caddo Lake Bayou Tours">
     <meta name="author" content="Taran Pierce">
@@ -11,43 +12,121 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container">
-      <a class="logo" href="/index.html">Caddo Lake Bayou Tours</a>
-      <nav class="navbar navbar-default">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+    <div class="container body-content">
+      <header>
+        <div class="logo-container">
+          <a class="logo" href="/index.html">Caddo Lake Bayou Tours</a>
         </div>
-        <div class="collapse navbar-collapse" id="main-nav">
-          <ul class="nav navbar-nav">
-            <li class="active">
-              <a href="index.html">Home</a>
-            </li>
-            <li>
-              <a href="about.html">About</a>
-            </li>
-            <li>
-              <a href="directions.html">Directions</a>
-            </li>
-            <li>
-              <a href="photo-gallery.html">Photo Gallery</a>
-            </li>
-            <li>
-              <a href="contact.html">Contact</a>
-            </li>
-          </ul>
+        <nav class="navbar navbar-default">
+          <a class="navbar-brand" href="/index.html">Caddo Lake Bayou Tours</a>
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div class="collapse navbar-collapse" id="main-nav">
+            <ul class="nav navbar-nav">
+              <li>
+                <a href="about.html">About</a>
+              </li>
+              <li>
+                <a href="directions.html">Directions</a>
+              </li>
+              <li>
+                <a href="photo-gallery.html">Photo Gallery</a>
+              </li>
+              <li>
+                <a href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+      <section class="hero">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" width="560" height="315" src="//www.youtube.com/embed/UHW2DYEtvi4?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
-      </nav>
-    </div>
-    <div class="container">
-      <img class="img-responsive" src="images/test-image-2.jpg" alt="Test Image" />
-      <h1>Caddo Lake Bayou Tours</h1>
-      <h2>Set up your tour today!</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+      <section>
+        <h1>Come visit the swamp!</h1>
+        <h2>Set up your tour today!</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+      <section>
+        <div class="row">
+          <div class="col-xs-12 col-sm-4">
+            <h4>Cool Fact</h4>
+            <ul class="list-unstyled">
+              <li>Something</li>
+              <li>Something</li>
+              <li>Something</li>
+              <li>Something</li>
+              <li>Something</li>
+            </ul>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+           <h4>Animals You will see</h4>
+            <ul class="list-unstyled">
+              <li>Something</li>
+              <li>Something</li>
+              <li>Something</li>
+              <li>Something</li>
+              <li>Something</li>
+            </ul>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <h4>Things to do</h4>
+            <ul class="list-unstyled">
+              <li>Something</li>
+              <li>Something</li>
+              <li>Something</li>
+              <li>Something</li>
+              <li>Something</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="row">
+          <div class="col-xs-12 col-sm-8">
+            <h3>Check out our photos</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a class="btn btn-info" href="photo-gallery.html">View Photos</a>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <img src="images/gallery/test-image-5.jpg" class="img-responsive" alt="Test Image" />
+          </div>
+        </div>
+      </section>
+      <footer>
+        <div class="row">
+          <div class="col-xs-12 col-sm-4">
+            <h4>Sitemap</h4>
+            <ul class="list-unstyled">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="directions.html">Directions</a></li>
+              <li><a href="photo-gallery.html">Photo Gallery</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <h4>Quick Links</h4>
+            <ul class="list-unstyled">
+              <li>First</li>
+              <li>Second</li>
+            </ul>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <h4>Social Media</h4>
+          </div>
+        </div>
+        <p class="copy-right">Copyright 2018 &copy;</p>
+      </footer>
     </div>
 
     <!-- build:js js/bootstrap-bundle.js -->
