project/caddo-tours
finished up base site

doing touch ups

still need to swap out with real images

--- a/app/contact.html
+++ b/app/contact.html
@@ -5,6 +5,23 @@
     <title>Contact - Caddo Lake Bayou Tours</title>
     <meta name="description" content="Caddo Lake Bayou Tours">
     <meta name="author" content="Taran Pierce">
+    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/base.css">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -76,6 +93,8 @@
         </div>
         <div class="col-xs-12 col-sm-6">
           <h3>Address</h3>
+          <p>Call 903-570-2169 for pricing and availability.</p>
+            <h3>Check out our photos</h3>
           <p>Put address here</p>
           <p>Maybe some other info</p>
           <p>Phone Number</p>
@@ -112,29 +131,33 @@
       </div>
       </section>
       <footer>
-        <div class="row">
-          <div class="col-xs-12 col-sm-4">
-            <h4>Sitemap</h4>
-            <ul class="list-unstyled">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="directions.html">Directions</a></li>
-              <li><a href="photo-gallery.html">Photo Gallery</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-4">
+              <h4>Sitemap</h4>
+              <ul class="list-unstyled">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="directions.html">Directions</a></li>
+                <li><a href="photo-gallery.html">Photo Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+              <h4>Quick Links</h4>
+              <ul class="list-unstyled">
+                <li><a href="http://tpwd.texas.gov/state-parks/caddo-lake" target="_blank" rel="noopener">Caddo State Park</a></li>
+                <li><a href="http://shadygladeresort.com/" target="_blank" rel="noopener">Shady Glade Resort</a></li>
+                <li><a href="http://johnsonsranch.net/" target="_blank" rel="noopener">Johnson's Ranch Marina</a></li>
+                <li><a href="http://www.moonglowlodge.com/" target="_blank" rel="noopener">Moonglow Lodge</a></li>
+              </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+              <h4>Social Media</h4>
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Quick Links</h4>
-            <ul class="list-unstyled">
-              <li>First</li>
-              <li>Second</li>
-            </ul>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Social Media</h4>
-          </div>
+          <p class="copy-right">Copyright 2018 &copy;</p>
         </div>
-        <p class="copy-right">Copyright 2018 &copy;</p>
       </footer>
     </div>
 
