--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,23 @@
     <title>Caddo Lake Bayou Tours</title>
     <meta name="description" content="Caddo Lake Bayou Tours">
     <meta name="author" content="Taran Pierce">
+    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/base.css">
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -51,81 +68,70 @@
         </div>
       </section>
       <section>
-        <h1>Come visit the swamp!</h1>
-        <h2>Set up your tour today!</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </section>
-      <section>
         <div class="row">
-          <div class="col-xs-12 col-sm-4">
-            <h4>Cool Fact</h4>
-            <ul class="list-unstyled">
-              <li>Something</li>
-              <li>Something</li>
-              <li>Something</li>
-              <li>Something</li>
-              <li>Something</li>
-            </ul>
+          <div class="col-xs-12 col-sm-6">
+            <h1>Tour Caddo Lake!</h1>
+            <p>Come tour one of the most scenic and beautiful lakes in the South. Caddo Lake is approximately 26,000 acers of bald Cypress trees, spanish moss, abundant wildlife and
+              scenery that you will never forget. The lake has everything from
+          swamps, bayous and river ways that create a one of a kind experience.</p>
+            <p>Check out our photo gallery to see some of the beauty that awats you.</p>
+            <a class="btn btn-info" href="photo-gallery.html">View Photo Gallery</a>
           </div>
-          <div class="col-xs-12 col-sm-4">
-           <h4>Animals You will see</h4>
-            <ul class="list-unstyled">
-              <li>Something</li>
-              <li>Something</li>
-              <li>Something</li>
-              <li>Something</li>
-              <li>Something</li>
-            </ul>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Things to do</h4>
-            <ul class="list-unstyled">
-              <li>Something</li>
-              <li>Something</li>
-              <li>Something</li>
-              <li>Something</li>
-              <li>Something</li>
-            </ul>
+          <div class="col-xs-12 col-sm-6">
+            <img class="img-responsive" src="images/gallery/test-image-6.jpg" alt="Test Image" />
           </div>
         </div>
       </section>
       <section>
         <div class="row">
-          <div class="col-xs-12 col-sm-8">
-            <h3>Check out our photos</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a class="btn btn-info" href="photo-gallery.html">View Photos</a>
+          <div class="col-xs-12 col-sm-6">
+            <h2>A lake rich with history</h2>
+            <p>Caddo Lake is steeped in history dating back to the early 1800's. The history which includes the caddo Indian tribes that inhabited the area and the steamboat navigationl
+        trade from New Orleans to Jefferson, Texas are just some of the lakes rich history.</p>
+            <p>The names of certain areas of the lake such as Alligator Bayou, Starr Ditch, Ames Spring Basin, Potters Point, Britts Gap and Government Ditch among others give the
+          lake a certain mystic created by the characters from it's past.</p>
           </div>
-          <div class="col-xs-12 col-sm-4">
-            <img src="images/gallery/test-image-5.jpg" class="img-responsive" alt="Test Image" />
+          <div class="col-xs-12 col-sm-6">
+           <h3 class="h2">Areas of Caddo Lake</h3>
+            <ul class="list-unstyled">
+              <li>Alligator Bayou</li>
+              <li>Starr Ditch</li>
+              <li>Ames Spring Basin</li>
+              <li>Potter's Point</li>
+              <li>Britt's Gap</li>
+              <li>Government Ditch</li>
+            </ul>
           </div>
         </div>
       </section>
       <footer>
-        <div class="row">
-          <div class="col-xs-12 col-sm-4">
-            <h4>Sitemap</h4>
-            <ul class="list-unstyled">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="directions.html">Directions</a></li>
-              <li><a href="photo-gallery.html">Photo Gallery</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-4">
+              <h4>Sitemap</h4>
+              <ul class="list-unstyled">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="directions.html">Directions</a></li>
+                <li><a href="photo-gallery.html">Photo Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+              <h4>Quick Links</h4>
+              <ul class="list-unstyled">
+                <li><a href="http://tpwd.texas.gov/state-parks/caddo-lake" target="_blank" rel="noopener">Caddo State Park</a></li>
+                <li><a href="http://shadygladeresort.com/" target="_blank" rel="noopener">Shady Glade Resort</a></li>
+                <li><a href="http://johnsonsranch.net/" target="_blank" rel="noopener">Johnson's Ranch Marina</a></li>
+                <li><a href="http://www.moonglowlodge.com/" target="_blank" rel="noopener">Moonglow Lodge</a></li>
+              </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+              <h4>Social Media</h4>
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Quick Links</h4>
-            <ul class="list-unstyled">
-              <li>First</li>
-              <li>Second</li>
-            </ul>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Social Media</h4>
-          </div>
+          <p class="copy-right">Copyright 2018 &copy;</p>
         </div>
-        <p class="copy-right">Copyright 2018 &copy;</p>
       </footer>
     </div>
 
