--- a/app/about.html
+++ b/app/about.html
@@ -6,6 +6,20 @@
     <title>About - Caddo Lake Bayou Tours</title>
     <meta name="description" content="Caddo Lake Bayou Tours">
     <meta name="author" content="Taran Pierce">
+    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="css/base.css">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -47,86 +61,103 @@
       </header>
       <section>
         <div class="row">
-        <div class="col-xs-12 col-sm-7">
-          <h1>About Page</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="btn btn-info" href="photo-gallery.html">View Photos</a>
+          <div class="col-xs-12 col-sm-6">
+            <h1>About Caddo Lake</h1>
+            <p>Caddo Lake is steeped in history dating back to the early 1800's. The history which includes the caddo Indian tribes that inhabited the area and the steamboat navigationl
+        trade from New Orleans to Jefferson, Texas are just some of the lakes rich history.</p>
+            <p>Caddo Lake is located between Marshall, Texas and Shreveport, Louisiana in Uncertain, Texas. Bayou Tours is located at Shady Glade Resort, five miles from Caddo Lake State
+          Park. Tours are available daily.</p>
+            <p>
+              <a class="btn btn-info" href="photo-gallery.html">View Photos</a>
+            </p>
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <img src="images/gallery/test-image-6.jpg" class="img-responsive" alt="Test Image" />
+          </div>
         </div>
-        <div class="col-xs-12 col-sm-5">
-          <img class="img-responsive" src="images/test-image.jpg" alt="Test Image" />
-        </div>
-      </div>
-        <div class="row">
-        <div class="col-xs-12 col-sm-5">
-          <img class="img-responsive" src="images/test-image.jpg" alt="Test Image" />
-        </div>
-        <div class="col-xs-12 col-sm-7">
-          <h2>Cool Stuff</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <h4>Cool Stuff to do</h4>
-          <ul>
-            <li>Things to see</li>
-            <li>Things to see</li>
-            <li>Things to see</li>
-            <li>Things to see</li>
-          </ul>
-        </div>
-      </div>
       </section>
       <section>
         <div class="row">
-        <div class="col-xs-12 col-sm-7">
-          <h1>About Page</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="btn btn-info" href="photo-gallery.html">View Photos</a>
+          <div class="col-xs-12 col-sm-6">
+            <img class="img-responsive" src="images/gallery/test-image-6.jpg" alt="Test Image" />
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <h3>Wildlife in the area</h3>
+            <p>Here are just a few examples of the wildlife you can expect to see:</p>
+            <ul class="list-unstyled">
+              <li>
+                <h4><strong>Alligators</strong></h4>
+                <p>A member of the crocodile family, the American alligator is a living fossil from the Age of Reptiles, having survived on earth for 200 million years.</p>
+                <p><a href="https://www.fws.gov/refuge/Caddo_Lake/wildlife/alligator.html" target="_blank" rel="noopener">More info here.</a></p>
+              </li>
+              <li>
+                <h4><strong>Paddlefish</strong></h4>
+                <p>The American paddlefish is a species of basal ray-finned fish closely related to sturgeons in the order Acipenseriformes.</p>
+                <p><a href="https://www.fws.gov/refuge/caddo_lake/wildlife/paddlefish.html" target="_blank" rel="noopener">More info here.</a></p>
+              </li>
+              <li>
+                <h4><strong>And many more..</strong></h4>
+                <p><a href="https://www.fws.gov/refuge/Caddo_Lake/wildlife_and_habitat/index.html" target="_blank" rel="noopener">More info here.</a></p>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="col-xs-12 col-sm-5">
-          <img class="img-responsive" src="images/test-image.jpg" alt="Test Image" />
-        </div>
-      </div>
+      </section>
+      <section>
         <div class="row">
-        <div class="col-xs-12 col-sm-5">
-          <img class="img-responsive" src="images/test-image.jpg" alt="Test Image" />
+          <div class="col-xs-12 col-sm-6">
+            <h3>Things to do</h3>
+            <p>There are plenty of things to do while in the area. Here are a few:</p>
+            <ul class="list-unstyled">
+              <li>
+                <h4><strong>Fishing</strong></h4>
+                <p>Tons of fishing in the area</p>
+                <p><a href="https://www.fws.gov/refuge/Caddo_Lake/wildlife/alligator.html" target="_blank" rel="noopener">More info here.</a></p>
+              </li>
+              <li>
+                <h4><strong>Sight seeing</strong></h4>
+                <p>Enjoy the beautiful lake, lot's of wildlife and the over all mystique of Caddo Lake.</p>
+                <p><a href="https://www.fws.gov/refuge/caddo_lake/wildlife/paddlefish.html" target="_blank" rel="noopener">More info here.</a></p>
+              </li>
+              <li>
+                <h4><strong>Did I mention fishing?</strong></h4>
+                <p><a href="https://www.fws.gov/refuge/Caddo_Lake/wildlife_and_habitat/index.html" target="_blank" rel="noopener">More info here.</a></p>
+              </li>
+            </ul>
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <img class="img-responsive" src="images/gallery/test-image-6.jpg" alt="Test Image" />
+          </div>
         </div>
-        <div class="col-xs-12 col-sm-7">
-          <h2>Cool Stuff</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <h4>Cool Stuff to do</h4>
-          <ul>
-            <li>Things to see</li>
-            <li>Things to see</li>
-            <li>Things to see</li>
-            <li>Things to see</li>
-          </ul>
-        </div>
-      </div>
       </section>
       <footer>
-        <div class="row">
-          <div class="col-xs-12 col-sm-4">
-            <h4>Sitemap</h4>
-            <ul class="list-unstyled">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="directions.html">Directions</a></li>
-              <li><a href="photo-gallery.html">Photo Gallery</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-4">
+              <h4>Sitemap</h4>
+              <ul class="list-unstyled">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="directions.html">Directions</a></li>
+                <li><a href="photo-gallery.html">Photo Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+              <h4>Quick Links</h4>
+              <ul class="list-unstyled">
+                <li><a href="http://tpwd.texas.gov/state-parks/caddo-lake" target="_blank" rel="noopener">Caddo State Park</a></li>
+                <li><a href="http://shadygladeresort.com/" target="_blank" rel="noopener">Shady Glade Resort</a></li>
+                <li><a href="http://johnsonsranch.net/" target="_blank" rel="noopener">Johnson's Ranch Marina</a></li>
+                <li><a href="http://www.moonglowlodge.com/" target="_blank" rel="noopener">Moonglow Lodge</a></li>
+              </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+              <h4>Social Media</h4>
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Quick Links</h4>
-            <ul class="list-unstyled">
-              <li>First</li>
-              <li>Second</li>
-            </ul>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Social Media</h4>
-          </div>
+          <p class="copy-right">Copyright 2018 &copy;</p>
         </div>
-        <p class="copy-right">Copyright 2018 &copy;</p>
       </footer>
     </div>
 
