--- a/app/directions.html
+++ b/app/directions.html
@@ -5,6 +5,23 @@
     <title>Directions - Caddo Lake Bayou Tours</title>
     <meta name="description" content="Caddo Lake Bayou Tours">
     <meta name="author" content="Taran Pierce">
+    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/base.css">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -46,17 +63,13 @@
       </header>
        <section>
         <h1>Directions</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+         <p>Knowing how to get some where is half the battle. Let me help you out because Caddo Lake is a gem that can be hard to find.</p>
+         <p>Rest assured, once you make it to Caddo Lake you will find that it was well worth it.</p>
         <div class="row">
           <div class="col-xs-12 col-sm-6">
             <h2>Specific Directions</h2>
-            <p>Maybe some specific things here that Google maps wouldn't actually tell you. Just in case people need it. Like, look for the store. Or what ever.</p>
-            <ul>
-              <li>Step 1</li>
-              <li>Step 2</li>
-              <li>Step 3</li>
-              <li>Step 4</li>
-            </ul>
+            <p>Caddo Lake is located between Marshall, Texas and Shreveport, Louisiana in Uncertain, Texas.</p>
+            <p>Bayou Tours is located at Shady Glade Resort, five miles from Caddo Lake State Park. <strong>Tours are available daily</strong>.</p>
           </div>
           <div class="col-xs-12 col-sm-6">
             <div class="map-container">
@@ -70,59 +83,45 @@
         </div>
        </section>
        <section>
-        <div class="row">
-        <div class="col-xs-12 col-sm-7">
-          <h3>Something</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="btn btn-info" href="photo-gallery.html">View Photos</a>
-        </div>
-        <div class="col-xs-12 col-sm-5">
-          <img class="img-responsive" src="images/test-image.jpg" alt="Test Image" />
-        </div>
-      </div>
-        <div class="row">
-        <div class="col-xs-12 col-sm-5">
-          <img class="img-responsive" src="images/test-image.jpg" alt="Test Image" />
-        </div>
-        <div class="col-xs-12 col-sm-7">
-          <h2>Cool Stuff</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <h4>Cool Stuff to do</h4>
-          <ul>
-            <li>Things to see</li>
-            <li>Things to see</li>
-            <li>Things to see</li>
-            <li>Things to see</li>
-          </ul>
-        </div>
-      </div>
-      </section>
+         <div class="row">
+           <div class="col-xs-12 col-sm-6">
+            <img class="img-responsive" src="images/gallery/test-image-3.jpg" alt="Test Image" />
+           </div>
+           <div class="col-xs-12 col-sm-6">
+             <h3>Take in the beauty</h3>
+             <p>Still not convinced that Caddo Lake is worth the visit? Check out our photo gallery to get a glimpse of what awaits you.</p>
+             <p><a class="btn btn-info" href="photo-gallery.html">View Photo Gallery</a></p>
+           </div>
+         </div>
+       </section>
        <footer>
-        <div class="row">
-          <div class="col-xs-12 col-sm-4">
-            <h4>Sitemap</h4>
-            <ul class="list-unstyled">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="directions.html">Directions</a></li>
-              <li><a href="photo-gallery.html">Photo Gallery</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-4">
+              <h4>Sitemap</h4>
+              <ul class="list-unstyled">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="directions.html">Directions</a></li>
+                <li><a href="photo-gallery.html">Photo Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+              <h4>Quick Links</h4>
+              <ul class="list-unstyled">
+                <li><a href="http://tpwd.texas.gov/state-parks/caddo-lake" target="_blank" rel="noopener">Caddo State Park</a></li>
+                <li><a href="http://shadygladeresort.com/" target="_blank" rel="noopener">Shady Glade Resort</a></li>
+                <li><a href="http://johnsonsranch.net/" target="_blank" rel="noopener">Johnson's Ranch Marina</a></li>
+                <li><a href="http://www.moonglowlodge.com/" target="_blank" rel="noopener">Moonglow Lodge</a></li>
+              </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+              <h4>Social Media</h4>
+            </div>
           </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Quick Links</h4>
-            <ul class="list-unstyled">
-              <li>First</li>
-              <li>Second</li>
-            </ul>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <h4>Social Media</h4>
-          </div>
+          <p class="copy-right">Copyright 2018 &copy;</p>
         </div>
-        <p class="copy-right">Copyright 2018 &copy;</p>
       </footer>
       </div>
     </div>
