project/caddo-tours
uploaded the few photos I already have

--- a/app/about.html
+++ b/app/about.html
@@ -72,14 +72,14 @@
             </p>
           </div>
           <div class="col-xs-12 col-sm-6">
-            <img src="images/gallery/test-image-6.jpg" class="img-responsive" alt="Test Image" />
+            <img src="images/sunset/lake-sunset-3-md.jpg" class="img-responsive" alt="Sunset Caddo Lake" />
           </div>
         </div>
       </section>
       <section>
         <div class="row">
           <div class="col-xs-12 col-sm-6">
-            <img class="img-responsive" src="images/gallery/test-image-6.jpg" alt="Test Image" />
+            <img class="img-responsive" src="images/state-park/caddo-lake-state-park-md.jpg" alt="Caddo State Park bridge" />
           </div>
           <div class="col-xs-12 col-sm-6">
             <h3>Wildlife in the area</h3>
@@ -126,7 +126,7 @@
             </ul>
           </div>
           <div class="col-xs-12 col-sm-6">
-            <img class="img-responsive" src="images/gallery/test-image-6.jpg" alt="Test Image" />
+            <img class="img-responsive" src="images/state-park/caddo-lake-state-park-2-md.jpg" alt="Caddo State Park" />
           </div>
         </div>
       </section>
