--- a/app/directions.html
+++ b/app/directions.html
@@ -85,7 +85,7 @@
        <section>
          <div class="row">
            <div class="col-xs-12 col-sm-6">
-            <img class="img-responsive" src="images/gallery/test-image-3.jpg" alt="Test Image" />
+            <img class="img-responsive" src="images/sunset/lake-sunset-xl.jpg" alt="Sunset" />
            </div>
            <div class="col-xs-12 col-sm-6">
              <h3>Take in the beauty</h3>
