--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
             <a class="btn btn-info" href="photo-gallery.html">View Photo Gallery</a>
           </div>
           <div class="col-xs-12 col-sm-6">
-            <img class="img-responsive" src="images/gallery/test-image-6.jpg" alt="Test Image" />
+            <img class="img-responsive" src="images/sunset/lake-sunset-3-md.jpg" alt="Sunset Caddo Lake" />
           </div>
         </div>
       </section>
