--- a/app/photo-gallery.html
+++ b/app/photo-gallery.html
@@ -61,41 +61,27 @@
           </div>
         </nav>
   </header>
-     <section>
+    <section>
       <h1>Photo Gallery</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Here are some photos of Caddo Lake and the surrounding area so you can get an idea of what it's going to be like.</p>
+      <p>Of course like most things, it's even more beautiful in person. You don't have to take our word for it though, you can come and see for yourself. Call us today!</p>
       <div class="image-gallery-container">
-      <div class="image-gallery">
-        <div class="slide">
-          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-        </div>
-        <div class="slide">
-          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-        </div>
-        <div class="slide">
-          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-        </div>
-        <div class="slide">
-          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-        </div>
-        <div class="slide">
-          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-        </div>
-        <div class="slide">
-          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-        </div>
-        <div class="slide">
-          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-        </div>
-        <div class="slide">
-          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
-        </div>
-        <div class="slide">
-          <img src="images/gallery/test-image-4.webp" alt="Test Image" />
+        <div class="image-gallery">
+          <div class="slide">
+            <img src="images/state-park/caddo-lake-state-park-2-xl.jpg" alt="Caddo State Park" />
+          </div>
+          <div class="slide">
+            <img src="images/state-park/caddo-lake-state-park-xl.jpg" alt="More of Cado State Park" />
+          </div>
+          <div class="slide">
+            <img src="images/sunset/lake-sunset-xl.jpg" alt="Sunset on the lake" />
+          </div>
+          <div class="slide">
+            <img src="images/sunset/lake-sunset-3-xl.jpg" alt="Another sunset on the lake" />
+          </div>
         </div>
       </div>
-    </div>
-     </section>
+    </section>
     <footer>
         <div class="container">
           <div class="row">
