--- a/app/contact.html
+++ b/app/contact.html
@@ -61,74 +61,51 @@
           </div>
         </nav>
       </header>
-      <section>
-        <h1>Contact</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <div class="row">
-        <div class="col-xs-12 col-sm-6">
-          <h3>Send a Message</h3>
-          <p>Ask about tour reservations or general questions.</p>
-          <form>
-            <div class="form-group">
-              <label for="first_name">First Name</label>
-              <input class="form-control" type="text" name="first_name" id="first_name" />
-            </div>
-            <div class="form-group">
-              <label for="last_name">Last Name</label>
-              <input class="form-control" type="text" name="last_name" id="last_name" />
-            </div>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input class="form-control" type="email" name="email" id="email" />
-            </div>
-            <div class="form-group">
-              <label for="subject">Subject</label>
-             <input class="form-control" type="text" name="subject" id="subject" />
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea class="form-control" name="message" id="message"></textarea>
-            </div>
-          </form>
-        </div>
-        <div class="col-xs-12 col-sm-6">
-          <h3>Address</h3>
-          <p>Call 903-570-2169 for pricing and availability.</p>
-            <h3>Check out our photos</h3>
-          <p>Put address here</p>
-          <p>Maybe some other info</p>
-          <p>Phone Number</p>
-        </div>
-      </div>
+      <section class="hero">
+        <img class="img-responsive" src="images/sunset/lake-sunset-3-xl.jpg" alt="sun set" />
       </section>
       <section>
+        <h1>Contact</h1>
+        <p>If you have any questions please give us a call or you can contact us via email.</p>
+        <p>Come and enjoy the wonderful experience that is Caddo Lake. We can't wait to share it with you!</p>
         <div class="row">
-          <div class="col-xs-12 col-sm-7">
-            <h3>Some title</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a class="btn btn-info" href="photo-gallery.html">View Photos</a>
+          <div class="col-xs-12 col-sm-6">
+            <h3>Send a Message</h3>
+            <p>Ask about tour reservations or general questions.</p>
+            <form method="POST" action="helpers/form.php">
+              <div class="form-group">
+                <label for="first_name">First Name</label>
+                <input class="form-control" type="text" name="first_name" id="first_name" />
+              </div>
+              <div class="form-group">
+                <label for="last_name">Last Name</label>
+                <input class="form-control" type="text" name="last_name" id="last_name" />
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input class="form-control" type="email" name="email" id="email" />
+              </div>
+              <div class="form-group">
+                <label for="subject">Subject</label>
+               <input class="form-control" type="text" name="subject" id="subject" />
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control" name="message" id="message"></textarea>
+              </div>
+              <button type="submit" class="btn btn-info">Submit</button>
+            </form>
           </div>
-          <div class="col-xs-12 col-sm-5">
-            <img class="img-responsive" src="images/test-image.jpg" alt="Test Image" />
+          <div class="col-xs-12 col-sm-6">
+            <h3>Address</h3>
+            <ul class="list-unstyled">
+              <li><strong>449 Cypress Drive</strong></li>
+              <li>Karnack TX 75661</li>
+              <li><strong>Phone: </strong>903-570-2169</li>
+            </ul>
+            <img class="img-responsive" src="images/state-park/caddo-lake-state-park-md.jpg" alt="Another park" />
           </div>
         </div>
-        <div class="row">
-        <div class="col-xs-12 col-sm-5">
-          <img class="img-responsive" src="images/test-image.jpg" alt="Test Image" />
-        </div>
-        <div class="col-xs-12 col-sm-7">
-          <h2>Cool Stuff</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <h4>Cool Stuff to do</h4>
-          <ul>
-            <li>Things to see</li>
-            <li>Things to see</li>
-            <li>Things to see</li>
-            <li>Things to see</li>
-          </ul>
-        </div>
-      </div>
       </section>
       <footer>
         <div class="container">
