project/caddo-tours
modified production build

added missed responsive meta tags

--- a/app/contact.html
+++ b/app/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Caddo Lake Bayou Tours</title>
     <meta name="description" content="Caddo Lake Bayou Tours">
     <meta name="author" content="Taran Pierce">
@@ -72,7 +73,7 @@
           <div class="col-xs-12 col-sm-6">
             <h3>Send a Message</h3>
             <p>Ask about tour reservations or general questions.</p>
-            <form method="POST" action="helpers/form.php">
+            <form method="POST" action="mailto:taran.tpdesign@gmail.com">
               <div class="form-group">
                 <label for="first_name">First Name</label>
                 <input class="form-control" type="text" name="first_name" id="first_name" />
