--- a/app/directions.html
+++ b/app/directions.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Directions - Caddo Lake Bayou Tours</title>
     <meta name="description" content="Caddo Lake Bayou Tours">
     <meta name="author" content="Taran Pierce">
